# qAppTemplate

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  RenameMe.pro  rename.sh
app/: CMakeLists.txt  app.pro
app/android/: CMakeLists.txt  android.pri
app/desktop/: CMakeLists.txt  desktop.pri
app/ios/: CMakeLists.txt
app/linux/: CMakeLists.txt
app/main/: CMakeLists.txt  main.pri
app/main/qml/: main.qml
app/mock/: CMakeLists.txt  mock.pri
app/osx/: CMakeLists.txt  osx.pri
app/src/android/native/: README.md
app/src/android/resources/: README.md
app/src/ios/: ios.pri
app/src/linux/: linux.pri
app/src/main/: main.pri
app/src/main/qml/: README.md  main.qml
app/src/mock/: mock.pri
app/src/osx/: osx.pri
app/src/test/: test.pri
app/src/test/cpp/: README.md  TestExample.cpp  main.cpp
app/src/win32/: win32.pri
app/test/: CMakeLists.txt  test.pri
app/test/cpp/: TestExample.hpp  main.cpp
app/win32/: CMakeLists.txt
doc/: README.md
libs/: CMakeLists.txt  README.md  libs.pro
